--- a/index.html
+++ b/index.html
@@ -143,42 +143,78 @@
             Home
         </a>
 
-        <!-- First section: Grave -->
-        <a href="https://spartasoftstudio.itch.io/" class="image-link" target="_blank" title="Spartasoft's Itch.io">
+        
+        <!-- First section: Spell Forge -->
+        <a class="image-link" target="_blank" title="Spell Forge's Itch.io">
+            <div class="image-container section-5 fade-in">
+                <div class="image-content">
+                    <h2 class="fade-in">Spell Forge</h2>
+                    <p class="date fade-in">In Development</p>
+                    <div class="image-wrapper">
+                        <img id="spell-forge-image" alt="Image 1" class="fade-in">
+                    </div>
+                    <p class="role fade-in">My Role: Gameplay Programming & Spell System Design</p>
+                </div>
+                <div class="image-info fade-in">
+                    <p>"Spell Forge" is a <u>competitive roguelike spell-crafting</u> game currently in development by a team of five in my MI 455 class, where players collect components to forge custom spells before battling each other in fast-paced, free-for-all duels. After each crafting phase, players fight using their spells—whoever wins three rounds first is crowned the victor. I implemented the game’s <u>modular spell system</u> and <u>co-designed the spells</u>, creating individual components and defining how they interact.</p>
+                </div>
+            </div>
+        </a>
+
+        <!-- Second section: Marble Game -->
+        <a href="https://caleb-flosky.itch.io/marble-game" class="image-link" target="_blank" title="Marble Game's Itch.io">
+            <div class="image-container section-4 fade-in">
+                <div class="image-content">
+                    <h2 class="fade-in">Marble Game</h2>
+                    <p class="date fade-in">Released: February 22nd, 2025</p>
+                    <div class="image-wrapper">
+                        <img id="marble-game-image" alt="Image 1" class="fade-in">
+                    </div>
+                    <p class="role fade-in">My Role: Networking Programming & Systems Programming</p>
+                </div>
+                <div class="image-info fade-in">
+                    <p>"Marble Game" is a <u>multiplayer zombie tag</u> experience designed for planetarium projection. Developed by a team of five during my MI 455 class, the game lets players join using their phones as one becomes the zombie and others try to avoid infection—until only one remains. I was responsible for <u>developing the WebSocket to Unity connection</u>, <u>implementing the game loop</u> to manage rounds and transitions, and converting gameplay into a <u>visual format optimized</u> for the planetarium dome, creating a unique and immersive group experience.</p>
+                </div>
+            </div>
+        </a>
+
+
+        <!-- Third section: Crazy Cash! Needs to Pay Rent -->
+        <a href="https://willfff.itch.io/crazy-cash-needs-to-pay-rent" class="image-link" target="_blank" title="Crazy Cash!'s Itch.io">
+            <div class="image-container section-1 fade-in">
+                <div class="image-content">
+                    <h2 class="fade-in">Crazy Cash! Needs to Pay Rent</h2>
+                    <p class="date fade-in">Released: December 12th, 2024</p>
+                    <div class="image-wrapper">
+                        <img id="crazy-cash-image" alt="Image 1" class="fade-in">
+                    </div>
+                    <p class="role fade-in">My Role: Environment Programming & Systems Programming</p>
+                </div>
+                <div class="image-info fade-in">
+                    <p>"Crazy Cash! Needs to Pay Rent" is a fast-paced dungeon crawler developed in a team of seven during my MI 445 class, the game challenges players to help Cash scrounge up rent money in just 7 in-game days—by diving headfirst into trap-filled, randomly generated dungeons. I implemented the <u>auto-generating level system</u>, the day-based <u>game loop</u>, and the <u>end sequence</u>. These systems brought the game's core loop to life, encouraging players to keep exploring, collecting, and surviving as the pressure mounts.</p>
+                </div>
+            </div>
+        </a>
+
+        <!-- Fourth section: Grave -->
+        <a href="https://spartasoftstudio.itch.io/grave" class="image-link" target="_blank" title="Spartasoft's Itch.io">
             <div class="image-container section-3 fade-in">
                 <div class="image-content">
                     <h2 class="fade-in">Grave</h2>
-                    <p class="date fade-in">Release Date: April 2025</p>
+                    <p class="date fade-in">Released: December 10th, 2024</p>
                     <div class="image-wrapper">
                         <img id="grave-image" alt="Image 1" class="fade-in">
                     </div>
                     <p class="role fade-in">My Role: Gameplay Programming</p>
                 </div>
                 <div class="image-info fade-in">
-                    <p>Grave is an upcoming game developed by Spartasoft Studio, currently in the development phase. As a programmer, my focus is strictly on the gameplay aspect, including the player mechanics and gameplay loop. This single-player experience is a 3D action game inspired by Hades, where players control the Rook, a demonic spawn caught in a dark, medieval conflict between two rival necromancers. The game blends intense combat with strategic choices for an immersive experience.</p>
+                    <p>"Grave" is a game developed by Spartasoft Studio, made and released in the Fall of 2024. On the programming team, my focus is strictly on the gameplay aspect, including the <u>player mechanics</u> and <u>gameplay loop</u>, most of my focus was on the players caches, stats, and collectables throughout the game. This single-player experience is a 3D action game inspired by Hades, where players control the Rook, a demonic spawn caught in a dark, medieval conflict between two rival necromancers.</p>
                 </div>
             </div>
         </a>
 
-
-        <!-- Second section: Market Mayhem -->
-        <a href="https://spartasoftstudio.itch.io/market-mayhem" class="image-link" target="_blank" title="Market Mayhem's Itch.io">
-            <div class="image-container section-5 fade-in">
-                <div class="image-content">
-                    <h2 class="fade-in">Market Mayhem</h2>
-                    <p class="date fade-in">Released: April 23rd, 2024</p>
-                    <div class="image-wrapper">
-                        <img id="market-mayhem-image" alt="Image 1" class="fade-in">
-                    </div>
-                    <p class="role fade-in">My Role: Programming Director, Networking Programmer</p>
-                </div>
-                <div class="image-info fade-in">
-                    <p>"Market Mayhem" is a 3D online multiplayer hide-and-seek game set in diverse locations like a supermarket, warehouse, or parking garage. Players can join as hiders or guards, with up to 8 players per lobby. As the Networking Programmer, I was responsible for the game's networking, including scenes, objects, and pre-game lobbies. Additionally, I was the go-to person for all networking-related questions. The project extended into a second semester, which led to my promotion as Programming Director.</p>
-                </div>
-            </div>
-        </a>
         
-        <!-- Third section: Maybe Mayhem -->
+        <!-- Fifth section: Maybe Mayhem -->
         <a href="https://caleb-flosky.itch.io/maybe-mayhem" class="image-link" target="_blank" title="Battle Blobs's Itch.io">
             <div class="image-container section-2 fade-in">
                 <div class="image-content">
@@ -190,43 +226,7 @@
                     <p class="role fade-in">My Role: Animation, Ragdoll, Level Design, Player Movement Programming</p>
                 </div>
                 <div class="image-info fade-in">
-                    <p>"Maybe Mayhem" was a project made during the Spartasoft February 2024 Game Jam. During this project, I was in charge of the Animations, Ragdoll, Level Design for the first and third level, and Player Controls. This game follows Free Scavenger's Journey with the goal of jumping and avoiding obstacles that are in his way. This game won "Best Level Design" Award for the Game Jam!</p>
-                </div>
-            </div>
-        </a>
-
-
-
-        <!-- Fourth section: Sneak Easy -->
-        <a href="https://spartasoftstudio.itch.io/sneakeasy" class="image-link" target="_blank" title="Sneak Easy's Itch.io">
-            <div class="image-container section-1 fade-in">
-                <div class="image-content">
-                    <h2 class="fade-in">Sneak Easy</h2>
-                    <p class="date fade-in">Released: April 25th, 2023</p>
-                    <div class="image-wrapper">
-                        <img id="sneak-easy-image" alt="Image 1" class="fade-in">
-                    </div>
-                    <p class="role fade-in">My Role: Player Programming & QTE Programming</p>
-                </div>
-                <div class="image-info fade-in">
-                    <p>"Sneak Easy" is a stealth platforming game that I helped develop as part of the programming team at Spartasoft Studio during Spring 2023. This captivating game emphasizes responsive character movement and Quick Time Events (QTEs), offering players an immersive experience as they navigate shadowy levels, outwitting adversaries with their agility and wits. My primary contributions focused on refining the character's movement and implementing exciting QTE moments, making "Sneak Easy" a thrilling adventure to move around in!</p>
-                </div>
-            </div>
-        </a>
-
-        <!-- Fifth section: Share and Reach -->
-        <a href="https://caleb-flosky.itch.io/share-and-reach" class="image-link" target="_blank" title="Share and Reach's Itch.io">
-            <div class="image-container section-4 fade-in">
-                <div class="image-content">
-                    <h2 class="fade-in">Share and Reach</h2>
-                    <p class="date fade-in">Released: June 8th, 2021</p>
-                    <div class="image-wrapper">
-                        <img id="share-and-reach-image" alt="Image 1" class="fade-in">
-                    </div>
-                    <p class="role fade-in">My Role: Sole Developer: Programming, Design, Art, Audio</p>
-                </div>
-                <div class="image-info fade-in">
-                    <p>Share and Reach is a puzzle game designed for 1-2 players. In this game, you control two square-headed characters with distinct properties, working together to solve a variety of puzzles. Created as my final project in my C# and Game Design Year 2 course in 2021, I took on the role of the sole developer, responsible for programming, art, level design, and everything except the background music. Share and Reach delivers a puzzle-solving experience with its challenging gameplay.</p>
+                    <p>"Maybe Mayhem" was a project made during the Spartasoft February 2024 Game Jam. During this project, I was in charge of the <u>Animations, Ragdoll, Level Design</u> for the first and third level, and <u>Player Controls</u>. This game follows Free Scavenger's Journey with the goal of jumping and avoiding obstacles that are in his way. This game won "Best Level Design" Award for the Game Jam!</p>
                 </div>
             </div>
         </a>
@@ -234,11 +234,11 @@
 
         <script>
             // Define arrays of image sources for each game
-            var sneakEasyImages = ['images/Sneak Easy/img1.png', 'images/Sneak Easy/img2.png', 'images/Sneak Easy/img3.png'];
+            var crazyCashImages = ['images/Crazy Cash/img1.png', 'images/Crazy Cash/img2.png', 'images/Crazy Cash/img3.png'];
             var maybeMayhemImages = ['images/Maybe Mayhem/img1.png', 'images/Maybe Mayhem/img2.png', 'images/Maybe Mayhem/img3.png'];
-            var graveImages = ['images/Grave/img1.png', 'images/Grave/img1.png', 'images/Grave/img1.png'];
-            var shareAndReachImages = ['images/Share and Reach/img1.png', 'images/Share and Reach/img2.png', 'images/Share and Reach/img3.png'];
-            var marketMayhemImages = ['images/Market Mayhem/img1.png', 'images/Market Mayhem/img2.png', 'images/Market Mayhem/img3.png'];
+            var graveImages = ['images/Grave/img1.png', 'images/Grave/img2.png', 'images/Grave/img3.png'];
+            var marbelGameImages = ['images/Marble-Game/img1.png', 'images/Marble-Game/img2.png', 'images/Marble-Game/img3.png'];
+            var spellForgeImages = ['images/Spell Forge/img1.png', 'images/Spell Forge/img2.png', 'images/Spell Forge/img3.png'];
 
             // Function to set a random image source for a given game
             function setRandomImage(gameImages, imageElementId) {
@@ -248,27 +248,11 @@
             }
 
             // Set random images for each game
-            setRandomImage(sneakEasyImages, 'sneak-easy-image');
+            setRandomImage(crazyCashImages, 'crazy-cash-image');
             setRandomImage(maybeMayhemImages, 'maybe-mayhem-image');
             setRandomImage(graveImages, 'grave-image');
-            setRandomImage(shareAndReachImages, 'share-and-reach-image');
-            setRandomImage(marketMayhemImages, 'market-mayhem-image');
-        </script>
-
-        <script>
-            // Function to set a random image source for a given game
-            function setRandomImage(gameImages, imageElementId) {
-                var randomIndex = Math.floor(Math.random() * gameImages.length);
-                var imageElement = document.getElementById(imageElementId);
-                imageElement.src = gameImages[randomIndex];
-            }
-
-            // Set random images for each game
-            setRandomImage(sneakEasyImages, 'sneak-easy-image');
-            setRandomImage(maybeMayhemImages, 'maybe-mayhem-image');
-            setRandomImage(graveImages, 'grave-image');
-            setRandomImage(shareAndReachImages, 'share-and-reach-image');
-            setRandomImage(marketMayhemImages, 'market-mayhem-image');
+            setRandomImage(marbelGameImages, 'marble-game-image');
+            setRandomImage(spellForgeImages, 'spell-forge-image');
         </script>
     </div>
 </body>
