--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="about-me-info fade-in">
-                    <p>Hello! I'm Caleb Flosky, and I'm a passionate Junior majoring in Computer Science at Michigan State University. Currently, I'm enrolled in MI 445 at the MSU Game Design Minor. On top of that, I am a Gameplay Programming at Spartasoft Studio, a Game Design Studio club. We're working on a project titled "Grave", a single-player 3D action game inspired by Hades. Video games have always been a big part of my life, and I'm thrilled to be able to contribute to the industry that has given me so much joy. I'm always eager to connect with fellow enthusiasts, so feel free to reach out!</p>
+                    <p>Hello! I'm Caleb Flosky, and I'm a passionate Senior majoring in Computer Science at Michigan State University. <br><br>Currently, I'm enrolled in MI 497 within the MSU Game Design Minor, where I'm developing a game called <span style="color: #57C45A; font-weight: bold;">SpellForge</span> as a <span style="color: #57C45A; font-weight: bold;">Networking Gameplay Programmer</span> focused on the spell system. SpellForge is an online multiplayer top-down fantasy game built using Quantum 3, where 2 or 4 players explore a mystical village, collect powerful spells, and battle each other in fast-paced magical combat. I'm always excited to connect with fellow developers and players, so feel free to reach out!</p>
                 </div>
             </div>
         </a>
