--- a/portfolio.html
+++ b/portfolio.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Portfolio">
-    <meta name="keywords" content="Game Design, Portfolio, MSU">
-    <meta name="author" content="Caleb Flosky">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name-text="description" content="Portfolio">
+    <meta name-text="keywords" content="Game Design, Portfolio, MSU">
+    <meta name-text="author" content="Caleb Flosky">
+    <meta name-text="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
     <title>Portfolio</title>
     
