--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="icon" href="images/sonic.jpg" type="image/jpg">
     <link rel="stylesheet" type="text/css" href="CSS/index-style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/global.css">
 </head>
 
 <body>
@@ -26,8 +27,9 @@
                  data-speed="2.0">
         </a>
 
-        <a class="header-text" href="">Resume</a>
-        <a class="header-text" href="">About</a>
+        <a class="header-text" href="">Projects</a>
+        <a class="header-text" href="resume.html">Resume</a>
+        <a class="header-text" href="about.html">About</a>
     </div>
 
     <!-- ---------------- NAME ---------------- -->
@@ -160,6 +162,14 @@
 
     <!-- FLOATING + IMAGE SLIDER ENGINE -->
     <script src="java/index.js"></script>
+
+    <!-- Clickable Images -->
+    <script src="java/global.js"></script>
+
+    <!-- GLOBAL LIGHTBOX -->
+    <div id="global-lightbox" class="img-lightbox">
+        <img id="global-lightbox-img" src="">
+    </div>
 
 </body>
 </html>
