--- a/about.html
+++ b/about.html
@@ -28,7 +28,11 @@
             <span style="--delay: 1.05s;">e</span>
         </h1>
 
-        <a href="index.html" class="home-button">← Back Home</a>
+        <div class="nav-buttons">
+            <a href="index.html" class="nav-button">← Projects</a>
+            <a href="resume.html" class="nav-button">Resume</a>
+        </div>
+
     </div>
 
     <!-- ABOUT CONTENT -->
@@ -40,17 +44,17 @@
 
         <div class="about-text-section fade-in">
             <p>
-                Hello! I'm <strong>Caleb Flosky</strong>, a passionate Senior majoring in 
-                <strong>Computer Science at Michigan State University</strong>.  
+                Hello! I'm <strong>Caleb Flosky</strong>, a Senior majoring in 
+                <strong>Computer Science at <br><span class="accent">Michigan State University</span></strong>.  
                 <br><br>
 
-                I'm currently enrolled in <strong>MI 497</strong> within the MSU Game Design Minor, 
-                where I am developing a game called 
+                I'm currently enrolled in <strong>MI 497</strong> within the MSU Game Development Minor, 
+                where I have developed a game called 
                 <span class="accent">SpellForge</span> as a 
-                <span class="accent">Networking Gameplay Programmer</span> focused on the spell system.
+                <span class="accent">Networking and Gameplay Programmer</span> focused on the Spell System.
                 <br><br>
 
-                SpellForge is an online multiplayer top-down fantasy game built using <strong>Quantum 3</strong>, 
+                Spell Forge is an online multiplayer top-down fantasy game built using <strong>Quantum 3</strong>, 
                 where 2 or 4 players explore a mystical village, collect powerful spells, 
                 and battle each other in fast-paced magical combat.
                 <br><br>
