--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,10 @@
             <span style="--delay: 1.0s;">e</span>
         </h1>
 
-        <a href="index.html" class="home-button">← Back Home</a>
+        <div class="nav-buttons">
+            <a href="index.html" class="nav-button">← Projects</a>
+            <a href="about.html" class="nav-button">About Me</a>
+        </div>
     </div>
 
     <!-- RESUME CONTAINER -->
