--- a/index.html
+++ b/index.html
@@ -91,22 +91,22 @@
                      data-speed="0.8">
 
                 <h3>Spell Forge</h3>
-                <p>Gameplay Programming & Spell System Design</p>
+                <p>Gameplay & Networking Programming</p>
             </div>
 
-            <!-- MARBLE GAME -->
+            <!-- Miskatonic -->
             <div class="project-simple">
                 <img class="project-img floating cycle-img"
-                     data-images="/images/Marble-Game/img1.png,
-                                  /images/Marble-Game/img2.png,
-                                  /images/Marble-Game/img3.png"
+                     data-images="/images/Miskatonic/img1.png,
+                                  /images/Miskatonic/img2.png,
+                                  /images/Miskatonic/img3.png"
                      data-index="0"
-                     src="/images/Marble-Game/img1.png"
+                     src="/images/Miskatonic/img1.png"
                      data-strength="0.08"
                      data-speed="0.8">
 
-                <h3>Marble Game</h3>
-                <p>Networking & Systems Programming</p>
+                <h3>Miskatonic</h3>
+                <p>Gameplay Programming</p>
             </div>
 
             <!-- CRAZY CASH -->
@@ -128,19 +128,19 @@
         <!-- BOTTOM ROW -->
         <div class="portfolio-row row-bottom">
 
-            <!-- GRAVE -->
+           <!-- MARBLE GAME -->
             <div class="project-simple">
                 <img class="project-img floating cycle-img"
-                     data-images="/images/Grave/img1.png,
-                                  /images/Grave/img2.png,
-                                  /images/Grave/img3.png"
+                     data-images="/images/Marble-Game/img1.png,
+                                  /images/Marble-Game/img2.png,
+                                  /images/Marble-Game/img3.png"
                      data-index="0"
-                     src="/images/Grave/img1.png"
+                     src="/images/Marble-Game/img1.png"
                      data-strength="0.08"
                      data-speed="0.8">
 
-                <h3>Grave</h3>
-                <p>Gameplay Programming</p>
+                <h3>Marble Game</h3>
+                <p>Networking & Systems Programming</p>
             </div>
 
             <!-- MAYBE MAYHEM -->
