--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                      data-speed="0.8">
 
                 <h3>Miskatonic</h3>
-                <p>Gameplay Programming</p>
+                <p>Gameplay & Systems Programming</p>
             </div>
 
             <!-- CRAZY CASH -->
@@ -155,7 +155,7 @@
                      data-speed="0.8">
 
                 <h3>Maybe Mayhem</h3>
-                <p>Animation · Ragdoll · Level Design · Player Controls</p>
+                <p>Gameplay Programming & Level Design</p>
             </div>
         </div>
     </div>
