--- a/about.html
+++ b/about.html
@@ -48,20 +48,13 @@
                 <strong>Computer Science at <br><span class="accent">Michigan State University</span></strong>.  
                 <br><br>
 
-                I'm currently enrolled in <strong>MI 497</strong> within the MSU Game Development Minor, 
-                where I have developed a game called 
-                <span class="accent">Spell Forge</span> as a 
-                <span class="accent">Networking and Gameplay Programmer</span> focused on the Spell System.
+                I'm currently enrolled in <strong>MI 498</strong> within the MSU Game Development Minor, 
+                where I am developing a game called 
+                <span class="accent">Project Six Shooter</span> as a 
+                <span class="accent">Systems and Gameplay Programmer</span> focused on the Bullet System.
                 <br><br>
 
-                Spell Forge is an online multiplayer top-down fantasy game built using <strong>Quantum 3</strong>, 
-                where 2 or 4 players explore a mystical village, collect powerful spells, 
-                and battle each other in fast-paced magical combat.
-                <br><br>
-
-                I love collaborating with fellow developers, building gameplay systems, 
-                and creating responsive, expressive experiences through code.  
-                Feel free to reach out — I'm always excited to connect!
+                 Feel free to reach out, I'm always excited to connect and meet other game developers!
             </p>
         </div>
 
