--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
 
     <!-- RESUME CONTAINER -->
     <div class="resume-wrapper shadow">
-        <img src="images/Computer_Science_Resume-9-10-2025-1.png"
+        <img src="images/Caleb Flosky Resume 2-6-2026.png"
             alt="Caleb Flosky Resume"
             class="resume-image clickable-img">
     </div>
